stop text-align-last from being inherited by child elements of grid

--- a/css/reflex.css
+++ b/css/reflex.css
@@ -120,6 +120,10 @@
   flex-direction: column;
   text-align: left;
   text-align: start;
+  -moz-text-align-last: left;
+  -moz-text-align-last: start;
+  text-align-last: left;
+  text-align-last: start;
   letter-spacing: normal;
   word-spacing: normal;
   white-space: normal;
@@ -596,6 +600,10 @@ _:-ms-fullscreen,
 .grid--justify-end .grid__cell {
   text-align: left;
   text-align: start;
+  -moz-text-align-last: left;
+  -moz-text-align-last: start;
+  text-align-last: left;
+  text-align-last: start;
 }
 .grid--justify-center {
   text-align: center;
@@ -605,6 +613,10 @@ _:-ms-fullscreen,
 .grid--justify-center .grid__cell {
   text-align: left;
   text-align: start;
+  -moz-text-align-last: left;
+  -moz-text-align-last: start;
+  text-align-last: left;
+  text-align-last: start;
 }
 .grid--justify-space-between {
   text-align: justify;
@@ -616,6 +628,10 @@ _:-ms-fullscreen,
 .grid--justify-space-between .grid__cell {
   text-align: left;
   text-align: start;
+  -moz-text-align-last: left;
+  -moz-text-align-last: start;
+  text-align-last: left;
+  text-align-last: start;
 }
 .grid--justify-space-around {
   text-align: justify;
@@ -627,6 +643,10 @@ _:-ms-fullscreen,
 .grid--justify-space-around .grid__cell {
   text-align: left;
   text-align: start;
+  -moz-text-align-last: left;
+  -moz-text-align-last: start;
+  text-align-last: left;
+  text-align-last: start;
 }
 .grid__col--bleed {
   padding: 0;
