--- a/less/reflex/mixins.less
+++ b/less/reflex/mixins.less
@@ -64,6 +64,10 @@
 .resetTextAlign() {
     text-align: left;
     text-align: start;
+    -moz-text-align-last: left;
+    -moz-text-align-last: start;
+    text-align-last: left;
+    text-align-last: start;
 }
 
 // --------------------------------------------------
